--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -10,40 +10,57 @@
     body{
         background-color: lightseagreen;
     }
+
 </style>
+<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"integrity="sha512-..."crossorigin="anonymous"referrerpolicy="no-referrer" />
+
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">My Meals App</a>
+
+    <div class="ml-auto">
+        {% if user.is_authenticated %}
+            <a href="{% url 'admin_logout' %}" class="btn btn-danger">Logout</a>
+        {% else %}
+            <a href="{% url 'admin_login' %}" class="btn btn-primary">Login</a>
+        {% endif %}
+    </div>
+</nav>
 
 
+<div id="Nav1">
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <div class="container-fluid">
-    <a class="navbar-brand" href="#">Phiu Hotel</a>
+    <a class="navbar-brand" href="#"> <i class="fa-solid fa-hotel"></i> Phiu Hotel</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
         <li class="nav-item">
-        <a class="nav-link" href="{% url 'show' %}">Read Table Data</a>
+        <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house"></i>Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'create' %}">Create Data</a>
+        <a class="nav-link" href="{% url 'show' %}"><i class="fa-solid fa-eye"></i>See Records</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'create' %}"><i class="fa-solid fa-angle-down"></i>Insert Data</a>
         </li>
         </ul>
     </div>
     </div>
 </nav>
-    <div>
-       <div class="container my-5">
-
-    <div class="text-center mb-4">
+</div>
+{% block content %}
+    <div class="text-center mb-4" id="start">
         <h2 class="fw-bold">FOOD MENU</h2>
         <h5>PIHU HOTEL & CANTEEN</h5>
-    </div>
+    
 
     <div class="row g-4">
 
-        <!-- MEALS -->
+        
         <div class="col-md-6">
             <div class="card shadow">
                 <div class="card-body">
@@ -58,7 +75,7 @@
             </div>
         </div>
 
-        <!-- BEST IN VEG -->
+        
         <div class="col-md-6">
             <div class="card shadow">
                 <div class="card-body">
@@ -75,7 +92,7 @@
             </div>
         </div>
 
-        <!-- ROTI & PARATHA -->
+       
         <div class="col-md-6">
             <div class="card shadow">
                 <div class="card-body">
@@ -89,7 +106,7 @@
             </div>
         </div>
 
-        <!-- BEST IN NON-VEG -->
+       
         <div class="col-md-6">
             <div class="card shadow">
                 <div class="card-body">
@@ -110,7 +127,7 @@
             </div>
         </div>
 
-        <!-- DRINKS -->
+   
         <div class="col-md-6">
             <div class="card shadow">
                 <div class="card-body">
@@ -130,7 +147,7 @@
     </div>
 
 </div>
- 
+
     </div>
     <footer>
             <h4>
@@ -149,11 +166,13 @@
             </h4>
 
 
+
     </footer>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+{% endblock%}
 </body>
 </html>
 
