--- a/templates/create.html
+++ b/templates/create.html
@@ -1,4 +1,153 @@
-<!DOCTYPE html>
+<!-- {% extends 'home.html' %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">My Meals App</a>
+
+    <div class="ml-auto">
+        {% if user.is_authenticated %}
+            <a href="{% url 'admin_logout' %}" class="btn btn-danger">Logout</a>
+        {% else %}
+            <a href="{% url 'admin_login' %}" class="btn btn-primary">Login</a>
+        {% endif %}
+    </div>
+</nav>
+
+{% block content %}
+<form method="POST">
+    {% csrf_token %}
+    <div class="INPtags w-75 d-grid row g-3">
+        <div class="mb-3 col-md-6">
+            <label for="name">Name :</label>
+            <input type="text" name="name" class="form-control" value="{{ user.name|default:'' }}">
+        </div>
+        <div class="mb-3 col-md-6">
+            <label for="advance">Advance :</label>
+            <input type="text" name="advance" class="form-control" value="{{ user.advance|default:'' }}">
+        </div>
+        <div class="mb-3 col-md-6">
+            <label for="location">Location :</label>
+            <input type="text" name="location" class="form-control" value="{{ user.location|default:'' }}">
+        </div>
+        <div class="mb-3 col-md-6">
+            <label for="date">Date :</label>
+            <input type="date" name="date" class="form-control" value="{{ user.date|default:'' }}">
+        </div>
+        <div class="mb-3 col-md-6">
+            <label for="lunch">Lunch :</label>
+            <input type="text" name="lunch" class="form-control" value="{{ user.lunch|default:'' }}">
+        </div>
+        <div class="mb-3 col-md-6">
+            <label for="dinner">Dinner :</label>
+            <input type="text" name="dinner" class="form-control" value="{{ user.dinner|default:'' }}">
+        </div>
+        <div class="mb-3 col-md-6">
+            <label for="extra_meals">Extra Meals :</label>
+            <input type="text" name="extra_meals" class="form-control" value="{{ user.extra_meals|default:'' }}">
+        </div>
+    </div>
+
+    <input type="submit" value="Submit" class="btn btn-primary">
+</form>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +162,30 @@
 </style>
 </head>
 <body>
-    <div class="container mt-5">
+    <div id="Nav1">
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="#">Phiu Hotel</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'show' %}">Read Table Data</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'create' %}">Create Data</a>
+        </li>
+        </ul>
+    </div>
+    </div>
+</nav>
+</div> -->
+    <!-- <div class="container mt-5">
         <h3 class="mb-4 text-primary">PIHU HOTEL & CANTEEN</h3>
     </div>
     
@@ -52,10 +224,10 @@
                 <input type="text" name="extra_meals" value="{{ User.extra_meals }}"><br>
             </div>
 
-    </div>
+    </div> 
 
         <input type="submit" value="Submit">
     </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html> -->
