--- a/templates/show.html
+++ b/templates/show.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Read</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-
-<body>
+<!-- {% extends 'home.html' %}
+{% block content %}
 <div class="container-fluid mt-4">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">My Meals App</a>
+
+    <div class="ml-auto">
+        {% if user.is_authenticated %}
+            <a href="{% url 'admin_logout' %}" class="btn btn-danger">Logout</a>
+        {% else %}
+            <a href="{% url 'admin_login' %}" class="btn btn-primary">Login</a>
+        {% endif %}
+    </div>
+</nav>
 
     <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover text-center">
@@ -19,31 +20,33 @@
                 <tr>
                     <th>ID</th>
                     <th>Name</th>
-                    <th>Advance</th>
                     <th>Location</th>
                     <th>Date</th>
                     <th>Lunch</th>
                     <th>Dinner</th>
                     <th>Extra Meals</th>
+                    <th>Action</th>
                 </tr>
             </thead>
 
             <tbody>
-            {% for Cus in Users %}
+            {% for meal in meals %}
                 <tr>
-                    <td>{{ Cus.id }}</td>
-                    <td>{{ Cus.name }}</td>
-                    <td>{{ Cus.advance }}</td>
-                    <td>{{ Cus.location }}</td>
-                    <td>{{ Cus.date }}</td>
-                    <td>{{ Cus.lunch }}</td>
-                    <td>{{ Cus.dinner }}</td>
-                    <td>{{ Cus.extra_meals }}</td>
+                    <td>{{ meal.id }}</td>
+                    <td>{{ meal.customer.name }}</td>
+                    <td>{{ meal.customer.location }}</td>
+                    <td>{{ meal.date }}</td>
+                    <td>{{ meal.lunch }}</td>
+                    <td>{{ meal.dinner }}</td>
+                    <td>{{ meal.extra_meals }}</td>
+                    <td>
+                        <a href="{% url 'update' meal.id %}" class="btn btn-warning btn-sm">Update</a>
+                        <a href="{% url 'delete' meal.id %}" class="btn btn-danger btn-sm">Delete</a>
+                    </td>
                 </tr>
+            {% empty %}
                 <tr>
-                <td>
-                <a href="{% url 'update' Cus.id %}" class="btn btn-warning btn-sm">Update </a>
-                </td>
+                    <td colspan="8">No records found</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -54,5 +57,4 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %} -->
