--- a/templates/update.html
+++ b/templates/update.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">My Meals App</a>
+
+    <div class="ml-auto">
+        {% if user.is_authenticated %}
+            <a href="{% url 'admin_logout' %}" class="btn btn-danger">Logout</a>
+        {% else %}
+            <a href="{% url 'admin_login' %}" class="btn btn-primary">Login</a>
+        {% endif %}
+    </div>
+</nav>
 
     <h1> HTml update Pages </h1>
     <form method="POST">
@@ -37,4 +48,4 @@
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html> -->
