--- a/adminpanel/templates/adminpanel/admin_login.html
+++ b/adminpanel/templates/adminpanel/admin_login.html
@@ -1,8 +1,9 @@
-{% extends 'admin_panle/base_admin.html' %}
+{% extends 'adminpanel/base_admin.html' %}
 
 {% block title %}Admin Login{% endblock %}
 
 {% block content %}
+
 <div class="row justify-content-center mt-5">
     <div class="col-md-4">
 
@@ -32,7 +33,7 @@
                 </div>
             {% endfor %}
         {% endif %}
-
+    
     </div>
 </div>
 {% endblock %}
