--- a/meals/templates/meals/home.html
+++ b/meals/templates/meals/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Search & Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 </head>
 <body>
 <div class="container mt-5">
@@ -12,7 +14,7 @@
 
         <!-- Search Section (Everyone can use) -->
         <div class="col-md-6">
-            <h3>Search Meals</h3>
+            <h3> Search Meals <i class="bi bi-plate"></i></h3>
             <form method="get" class="row g-3 mb-4">
                 <div class="col-5">
                     <input type="text" name="name" placeholder="Customer name" class="form-control" value="{{ query_name }}">
@@ -21,7 +23,7 @@
                     <input type="date" name="date" class="form-control" value="{{ query_date }}">
                 </div>
                 <div class="col-2">
-                    <button type="submit" class="btn btn-primary w-100">Search</button>
+                    <button type="submit" class="btn btn-primary w-100">Search <i class="bi bi-search"></i></button>
                 </div>
             </form>
 
